--- a/css/main.css
+++ b/css/main.css
@@ -2,18 +2,28 @@ body{
 
 	font-family: 'Source Sans Pro', sans-serif;
 	color: #2b2b2b;
+	max-width: 1500px;
+	width: 100%;
+	margin: 20px auto;
+	overflow: auto;
 }
 
 #about, #skills, #contact {
 
 	height: 700px;
+	max-width: 1200px;
+	width: 100%;
+	clear: both;
+	overflow: auto;
+	margin: 0 auto;
 }
 
 /*GRID*/
 
 .full-width {
 
-	width: 1200px;
+	max-width: 1200px
+	width: 50%;
 	margin: 0 auto;
 }
 
@@ -32,7 +42,7 @@ body{
 
 header {
 
-	height: 800px;
+	height: 900px;
 	background: 
 	  linear-gradient(
           rgba(0, 0, 0, 0.4), 
@@ -41,6 +51,7 @@ header {
 	  url("../img/desktop-cropped.jpg") no-repeat center;
 	background-size: cover;
 	background-blend-mode: darken;
+	overflow: auto;
 }
 
 header h1{
@@ -145,7 +156,7 @@ header p {
 
 	background: black;
 	text-align: center;
-	border: 3px solid #00ff00;
+	border: 3px solid #c49075;
 }
 
 #skills .full-width {
@@ -190,8 +201,9 @@ header p {
 }
 
 #contact img#contact-img {
-	margin-left: 25px;
+	margin-left: 100px;
 	border: 12px solid #ffffff;
+
 }
 
 #contact h2, #contact #email-header, #contact #socialmedia-header, #contact ul {
